# linebot-llm-fortune-telling

./: .dockerignore  .gitignore  Dockerfile  ExDataScraper.py  README.md  README_zh-TW.md  app.py  data1.txt  data2.txt  docker-compose.yml  dump.rdb  embedding.py  fly.toml  generate_fortune_data.py  llmdatascrawlbug.py  main.py  pyproject.toml  rag.py  railwya.json  seed_data.json  start.sh  supervisord.conf
Fucntions/: generate_qa.py  web_scraper.py
core/: logger_config.py  rag.py  session_manager.py
data/: char_stroke_cache.json
rag/: bazi_true_solar.py  embedding.py  fortune_analysis.py  name_fivegrid_wuxing.py  rag.py  stroke_lookup.py
scraped_data/: data.json  data.txt
service/: embedding_service.py  main_app.py
util/: embedding.py  name_fivegrid_wuxing.py  rag.py  stroke_lookup.py
